Добавлены метрики telegraf для docekr, исправлен запуск wazuh с пустой машины

--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -29,3 +29,34 @@ port_opened:
   - 9500/tcp
   - 9000/tcp
   - 5601/tcp
+
+telegraf_inputs: "{{ telegraf_weslyg_input }}"
+
+telegraf_weslyg_input:
+  - input: cpu
+    config:
+      - percpu = false
+      - totalcpu = true
+      - collect_cpu_time = true
+      - fielddrop =
+        ["time_guest","time_guest_nice","time_irq","time_nice","time_softirq","time_steal","usage_guest","usage_guest_nice","usage_irq","usage_nice","usage_softirq","usage_steal"]
+      - interval = "2s"
+  - input: disk
+    config:
+      - ignore_fs = ["tmpfs", "devtmpfs"]
+  - input: io
+  - input: mem
+  - input: net
+  - input: system
+  - input: swap
+  - input: netstat
+  - input: net
+  - input: mem
+  - input: processes
+  - input: docker
+    config:
+      - endpoint = "unix:///var/run/docker.sock"
+      - gather_services = false
+      - timeout = "5s"
+      - perdevice = true
+      - total = false
